# Aura

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  aura_demo
.github/workflows/: ci.yml
config/: browser.txt  default.txt  default_mapping.txt  dual.txt  gaming.txt
data/: gestures.csv
demo/: CMakeLists.txt  DemoApp.cpp  DemoApp.hpp  main.cpp
include/: Camera.hpp
include/Aura/App/: ActivationGuard.hpp  AuraRunner.hpp  AutoProfileSwitcher.hpp
include/Aura/Config/: CalibConfig.hpp  ProfileManager.hpp
include/Aura/Core/: EventQueue.hpp  GestureEvent.hpp  KalmanFilter.hpp
include/Aura/Input/: Controller.hpp  DualMapper.hpp  Mapper.hpp
include/Aura/Vision/: Calibrator.hpp  Camera.hpp  GestureDetector.hpp  HandTracker.hpp  Types.hpp
models/: gesture_classifier.pkl  gesture_labels.txt
scripts/: aura.sh  build.sh  collect_gestures.py  hand_bridge.py  train_classifier.py
src/: Camera.cpp  main.cpp
src/App/: AuraRunner.cpp  AutoProfileSwitcher.cpp
src/Config/: CalibConfig.cpp  ProfileManager.cpp
src/Core/: KalmanFilter.cpp
src/Input/: Controller.cpp  DualMapper.cpp  Mapper.cpp
src/Vision/: Calibrator.cpp  Camera.cpp  GestureDetector.cpp  HandTracker.cpp
tests/: CMakeLists.txt  test_controller.cpp  test_dual_mapper.cpp  test_gesture_detector.cpp  test_gesture_event.cpp  test_kalman.cpp  test_mapper.cpp
